# notes

./: .env  .gitignore  app.py  demo.py  main.py  pyproject.toml  system_design.md  test_api.py
.cursor/rules/: notes-rules.mdc
examples/: basic_usage.py
src/: config.py
src/agent/: auditing.py  context.py  factory.py  graph.py  nodes.py  state.py
src/api/: app.py  dependencies.py  models.py  responses.py
src/api/routes/: chat.py  chat_router.py  documents.py  documents_router.py  health.py  vector_store_router.py
src/common/: error_codes.py  exceptions.py
src/db/: __init__.py  models.py  session.py
src/embedding/: chunker.py  embedder.py  vector_store.py
src/lib/: __init__.py  web_fetcher.py
src/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py  qwen_provider.py
src/prompts/: __init__.py  prompts.py
src/services/: chat_service.py  conversation_service.py  document_service.py  execution_recorder.py  runtime_service.py
src/tools/: base.py  document_loader.py  search.py
src/utils/: logger.py  text_processor.py
